// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Select > SelectWrappedComponent > viser en Nav Select 1`] = `
<div>
  <div
    class="navds-form-field navds-form-field--medium"
  >
    <label
      class="navds-form-field__label navds-label"
      for="321"
    >
      Label
    </label>
    <div
      class="navds-select__container"
    >
      <select
        class="navds-select__input navds-body-short navds-body-short--medium"
        id="321"
        name="feltName"
      >
        <option
          disabled=""
          value=""
        >
          Velg...
        </option>
        <option
          value="1"
        >
          Hallo hallo
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="navds-select__chevron"
        fill="none"
        focusable="false"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      aria-live="polite"
      aria-relevant="additions removals"
      class="navds-form-field__error"
      id="select-error-aksel-id-2"
    />
  </div>
</div>
`;

exports[`Select > snapshot test 1`] = `
<div>
  <div
    class="className navds-form-field navds-form-field--medium"
  >
    <label
      class="navds-form-field__label navds-label"
      for="1234"
    />
    <div
      class="navds-select__container"
    >
      <select
        array="[object Object]"
        class="navds-select__input navds-body-short navds-body-short--medium"
        form="test"
        id="1234"
        name="feltnavn"
      >
        <option
          disabled=""
          value=""
        >
          Velg...
        </option>
        <option
          disabled=""
          value=""
        >
          ingen valg tilgjengelig
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="navds-select__chevron"
        fill="none"
        focusable="false"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      aria-live="polite"
      aria-relevant="additions removals"
      class="navds-form-field__error"
      id="select-error-aksel-id-1"
    />
  </div>
</div>
`;
